# toktok-android

./: .gitignore  .travis.yml  BUILD  BUILD.bazel  README.md  build.gradle  build.sbt  gradle.properties  proguard-rules.pro  project.properties  settings.gradle
.github/: settings.yml
gradle/wrapper/: gradle-wrapper.properties
project/: android.sbt  plugins.sbt
sources/app/: BUILD.bazel  build.gradle
sources/app/src/androidTest/: AndroidManifest.xml
sources/app/src/androidTest/java/im/tox/toktok/app/: MainActivityHolderTest.java
sources/app/src/main/: AndroidManifest.xml
sources/app/src/main/java/im/tox/toktok/app/: CompatUtil.java  CustomViewPager.java  MainActivityHolder.java  MaterialColors.java  MyRecyclerScroll.java  SizeAnimation.java  TypedBundleKey.java
sources/app/src/main/java/im/tox/toktok/app/call/: BlurBuilder.java  CallActivity.java  CallMessageAdapter.java  CallOnGoingContactsAdapter.java  CallSliderAnswer.java  CallSliderDecline.java
sources/app/src/main/java/im/tox/toktok/app/contacts/: FileSendActivity.java  FileSendActivityAdapter.java  FileSendActivityViewHolder.java
sources/app/src/main/java/im/tox/toktok/app/domain/: ChatMessage.java  File.java  Friend.java
sources/app/src/main/java/im/tox/toktok/app/main/: HomeSearch.java  MainFragment.java  MainTabsAdapter.java
sources/app/src/main/java/im/tox/toktok/app/main/chats/: ChatItemClick.java  ChatsFragment.java  ChatsRecyclerAdapter.java
sources/app/src/main/java/im/tox/toktok/app/main/friends/: FriendItemClicks.java  FriendsFragment.java  FriendsRecyclerAdapter.java  FriendsRecyclerHeaderAdapter.java  SlideInContactsLayout.java
sources/app/src/main/java/im/tox/toktok/app/message_activity/: MessageActivity.java  MessageAdapter.java  MessageAttachments.java  MessageGroupContacts.java  MessageInputBarBehavior.java  MessageItemAnimator.java  MessageRecallActivity.java  MessageRecallRecyclerAdapter.java  SlideInAttachmentsLayout.java
sources/app/src/main/java/im/tox/toktok/app/new_message/: NewMessageActivity.java  NewMessageRecyclerAdapter.java  NewMessageRecyclerHeaderAdapter.java
sources/app/src/main/java/im/tox/toktok/app/profile/: ProfileFragment.java  RejectedCallAdapter.java  RejectedCallMessages.java
sources/app/src/main/java/im/tox/toktok/app/simple_dialogs/: SimpleAddFriendDialogDesign.java  SimpleColorDialogDesign.java  SimpleColorDialogDesignAdapter.java  SimpleDialogDesign.java  SimpleShareDialogDesign.java  SimpleStatusDialogDesign.java  SimpleTextDialogDesign.java
sources/app/src/main/java/im/tox/toktok/app/video_call/: VideoCallActivity.java
sources/app/src/main/res/anim/: activity_fade_in.xml  activity_fade_out.xml  fab_to_right.xml
sources/app/src/main/res/drawable/: attach_rectangle_corners.xml  background_black_opacity.xml  background_ripple.xml  background_transparent.xml  call_answer_button.xml  call_decline_button.xml  home_notification.xml  rectangle_corners.xml
sources/app/src/main/res/layout/: activity_call_layout.xml  activity_files_send.xml  activity_main.xml  activity_main_fragment.xml  activity_message.xml  activity_message_group_members.xml  activity_new_message.xml  activity_profile.xml  activity_recall_message.xml  activity_video_call.xml  call_bottom_on_going.xml  call_ongoing_contact.xml  call_slider_answer.xml  call_slider_decline.xml  call_top_on_going.xml  contacts_call.xml  contacts_file_download.xml  contacts_new_message.xml  contacts_save_profile_photo.xml  files_send_item.xml  fragment_home_chats_item_group.xml  fragment_home_chats_item_user.xml  fragment_home_friends.xml  fragment_home_friends_request.xml  fragment_home_friends_request_small.xml  home_search.xml  home_search_item_file.xml  home_search_item_friend.xml  home_search_item_group.xml  home_search_item_message.xml  message_item_action.xml  message_item_card_view.xml  message_item_friend_simple.xml  overlay_attachments.xml  overlay_contacts.xml  profile_options.xml  recall_header.xml  recall_item.xml  simple_addfriend_dialog_design.xml  simple_color_dialog_design.xml  (+4 more)
sources/app/src/main/res/menu/: menu_group_message.xml  menu_main.xml  message_action_mode.xml
sources/app/src/main/res/values/: strings.xml  styles.xml
sources/slidinguppanel/: BUILD.bazel  build.gradle
sources/slidinguppanel/src/main/java/com/sothree/slidinguppanel/: ScrollableViewHelper.java  SlidingUpPanelLayout.java  ViewDragHelper.java
sources/slidinguppanel/src/main/res/values/: attrs.xml
sources/stickyheadersrecyclerview/: BUILD.bazel  build.gradle
sources/stickyheadersrecyclerview/src/main/: AndroidManifest.xml
sources/stickyheadersrecyclerview/src/main/java/com/timehop/stickyheadersrecyclerview/: HeaderPositionCalculator.java  StickyRecyclerHeadersAdapter.java  StickyRecyclerHeadersDecoration.java  StickyRecyclerHeadersTouchListener.java
sources/stickyheadersrecyclerview/src/main/java/com/timehop/stickyheadersrecyclerview/caching/: HeaderProvider.java  HeaderViewCache.java
sources/stickyheadersrecyclerview/src/main/java/com/timehop/stickyheadersrecyclerview/calculation/: DimensionCalculator.java
sources/stickyheadersrecyclerview/src/main/java/com/timehop/stickyheadersrecyclerview/rendering/: HeaderRenderer.java
sources/stickyheadersrecyclerview/src/main/java/com/timehop/stickyheadersrecyclerview/util/: LinearLayoutOrientationProvider.java  OrientationProvider.java
sources/superslim/: BUILD.bazel  build.gradle
sources/superslim/src/main/: AndroidManifest.xml
src/main/: AndroidManifest.xml
src/main/res/anim/: fab_from_right.xml  fab_to_right.xml
src/main/res/drawable/: attach_rectangle_corners.xml  background_ripple.xml  call_answer_button.xml  call_decline_button.xml  call_rect_lines.xml  cardboard_ripple.xml  contacts_ripple.xml  gradient_contacts.xml  home_notification.xml  rectangle_corners.xml  ripple.xml  ripple_drawer_selected.xml  simple_dialog_button.xml  status_circle.xml
src/main/res/layout/: activity_call.xml  activity_call_layout.xml  activity_contacts.xml  activity_files_send.xml  activity_main.xml  activity_main_fragment.xml  activity_message.xml  (+65 more)
(+190 files in other folders)
