load("@rules_android//android:rules.bzl", "android_binary", "android_library")

android_binary(
    name = "app",
    custom_package = "im.tox.toktok",
    manifest = "src/main/AndroidManifest.xml",
    manifest_values = {
        "minSdkVersion": "14",
        "targetSdkVersion": "28",
    },
    deps = [":app_lib"],
)

android_library(
    name = "app_lib",
    srcs = glob(["src/main/java/**/*.java"]),
    custom_package = "im.tox.toktok",
    manifest = "src/main/AndroidManifest.xml",
    resource_files = glob(["src/main/res/**"]),
    deps = [
        "//toktok-android/sources/slidinguppanel",
        "//toktok-android/sources/stickyheadersrecyclerview",
        "//toktok-android/sources/superslim",
        "@maven//:androidx_annotation_annotation",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_cardview_cardview",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_coordinatorlayout_coordinatorlayout",
        "@maven//:androidx_core_core",
        "@maven//:androidx_customview_customview",
        "@maven//:androidx_drawerlayout_drawerlayout",
        "@maven//:androidx_fragment_fragment",
        "@maven//:androidx_recyclerview_recyclerview",
        "@maven//:androidx_viewpager_viewpager",
        "@maven//:com_google_android_material_material",
        "@maven//:de_hdodenhof_circleimageview",
        "@maven//:org_slf4j_slf4j_android",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

android_binary(
    name = "test_app",
    srcs = glob(["src/androidTest/**/*.java"]),
    custom_package = "im.tox.toktok.app",
    instruments = ":app",
    manifest = "src/androidTest/AndroidManifest.xml",
    manifest_values = {
        "minSdkVersion": "14",
        "targetSdkVersion": "28",
    },
    deps = [
        ":app_lib",
        "@maven//:androidx_annotation_annotation",
        "@maven//:androidx_test_espresso_espresso_core",
        "@maven//:androidx_test_ext_junit",
        "@maven//:androidx_test_rules",
        "@maven//:junit_junit",
        "@maven//:org_hamcrest_hamcrest_library",
    ],
)

# This doesn't work until android-test is migrated to Python 3.
# TODO(https://github.com/android/android-test/issues/609): Enable this.
#android_instrumentation_test(
#    name = "app_test",
#    target_device = "@android_test_support//tools/android/emulated_devices/generic_phone:android_28_x86",
#    test_app = ":test_app",
#)
