load("@rules_android//android:rules.bzl", "android_binary")

android_binary(
    name = "app",
    srcs = glob(["src/main/java/**/*.java"]),
    custom_package = "im.tox.toktok",
    manifest = "src/main/AndroidManifest.xml",
    manifest_values = {
        "minSdkVersion": "22",
        "targetSdkVersion": "28",
    },
    resource_files = glob(["src/main/res/**"]),
    deps = [
        "//toktok-android/sources/slidinguppanel",
        "//toktok-android/sources/stickyheadersrecyclerview",
        "//toktok-android/sources/superslim",
        "@maven//:androidx_annotation_annotation",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_cardview_cardview",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_coordinatorlayout_coordinatorlayout",
        "@maven//:androidx_core_core",
        "@maven//:androidx_customview_customview",
        "@maven//:androidx_drawerlayout_drawerlayout",
        "@maven//:androidx_fragment_fragment",
        "@maven//:androidx_recyclerview_recyclerview",
        "@maven//:androidx_viewpager_viewpager",
        "@maven//:com_google_android_material_material",
        "@maven//:de_hdodenhof_circleimageview",
        "@maven//:org_slf4j_slf4j_android",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
