load("@rules_android//android:rules.bzl", "android_library")

android_library(
    name = "slidinguppanel",
    srcs = glob(["src/main/java/**/*.java"]),
    custom_package = "com.sothree.slidinguppanel.library",
    manifest = "src/main/AndroidManifest.xml",
    resource_files = glob(["src/main/res/**"]),
    visibility = ["//toktok-android/sources/app:__pkg__"],
    deps = [
        "@maven//:androidx_annotation_annotation",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_collection_collection",
        "@maven//:androidx_core_core",
        "@maven//:androidx_recyclerview_recyclerview",
    ],
)
