load("@rules_android//android:rules.bzl", "android_library")

android_library(
    name = "stickyheadersrecyclerview",
    srcs = glob(["src/main/java/**/*.java"]),
    custom_package = "com.timehop.stickyheadersrecyclerview",
    manifest = "src/main/AndroidManifest.xml",
    resource_files = glob(["src/main/res/**"]),
    visibility = ["//toktok-android/sources/app:__pkg__"],
    deps = [
        "@maven//:androidx_recyclerview_recyclerview",
        "@maven//:androidx_collection_collection",
        "@maven//:androidx_core_core",
    ],
)
